--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ cache:
 addons:
   apt:
     packages:
+      - libzmq3-dev
       - aspell     # for dzil Test::PodSpelling
       - aspell-en  # for dzil Test::PodSpelling
 perl:
