--- a/META.yml
+++ b/META.yml
@@ -4,7 +4,6 @@ author:
   - 'Zakariyya Mughal <zmughal@cpan.org>'
   - 'Zhenyi Zhou <zhouzhen1@gmail.com>'
 build_requires:
-  IPerl: '0'
   Test::Most: '0'
   perl: '5.006'
 configure_requires:
@@ -20,6 +19,8 @@ name: Devel-IPerl-Plugin-ChartClicker
 requires:
   Capture::Tiny: '0'
   Chart::Clicker: '0'
+  Devel::IPerl::Display::PNG: '0'
+  Devel::IPerl::Display::SVG: '0'
   File::Temp: '0'
   Moo::Role: '0'
   Role::Tiny: '0'
@@ -29,5 +30,5 @@ requires:
 resources:
   homepage: https://github.com/EntropyOrg/p5-Devel-IPerl-Plugin-ChartClicker
   repository: https://github.com/EntropyOrg/p5-Devel-IPerl-Plugin-ChartClicker.git
-version: '0.007'
+version: '0.008'
 x_serialization_backend: 'YAML::Tiny version 1.70'
