--- a/dist.ini
+++ b/dist.ini
@@ -4,6 +4,9 @@ author  = Zhenyi Zhou <zhouzhen1@gmail.com>
 license = Perl_5
 copyright_holder = Zakariyya Mughal
 copyright_year   = 2017
-version = 0.007
+version = 0.008
 
 [@Author::ZMUGHAL]
+
+; [AutoPrereqs]
+AutoPrereqs.skip[0] = ^IPerl$
